# ml_playground

./: README.md
additional/cnn_quantization/: .gitignore  README.md  cnn_quantization.ipynb
additional/entity_embedding/: README.md  entity_embedding.ipynb
additional/prune/: README.md  Untitled.ipynb  prune.ipynb
additional/transformers/: README.md  transformers.ipynb
collaborative_filtering/: README.md  collaborative_filtering.ipynb
computer_vision/generative_models/: README.md  cvae.ipynb  dcgan.ipynb  diffusion.ipynb  pyproject.toml  vae.ipynb  vqvae.ipynb  wgan.ipynb
computer_vision/generative_models/data/: .gitignore
computer_vision/instance_segmentation/: .gitignore  README.md  mask_rcnn.ipynb
computer_vision/models/: README.md  dense_net.ipynb  inception_v1.ipynb  mobilenet_v1.ipynb  resnet.ipynb
computer_vision/neural_style_transfer/: README.md  neural_style_transfer.ipynb
computer_vision/object_detection/: .gitignore  README.md  faster_rcnn.ipynb  retinanet.ipynb  ssd.ipynb  yolo.ipynb  yolo_v1.ipynb
computer_vision/semantic_segmentation/: .gitignore  README.md  fcn.ipynb  u_net.ipynb
cv/models/: resnet.ipynb
fast_ai/: README.md
image_classification/multi_label_classification/: amazon.ipynb
image_classification/pneumonia/: README.md
natural_language_processing/sentiment_analysis/: README.md  bert.ipynb  sentiment_model.ipynb  word_embeddings.ipynb
natural_language_processing/speech_classification/: README.md  rnn.ipynb
natural_language_processing/text_synthesis/: README.md
natural_language_processing/tokenizers/: bpe.ipynb
(+49 files in other folders)
